# FederatedANN

./: .gitignore  README.md
dataset/siftsmall/2/: siftsmall_base_0.fivecs  siftsmall_base_1.fivecs
dataset/siftsmall/3/: siftsmall_base_0.fivecs  siftsmall_base_1.fivecs  siftsmall_base_2.fivecs
dataset/siftsmall/4/: siftsmall_base_0.fivecs  siftsmall_base_1.fivecs  siftsmall_base_2.fivecs  siftsmall_base_3.fivecs
dataset/siftsmall/5/: siftsmall_base_0.fivecs  siftsmall_base_1.fivecs  siftsmall_base_2.fivecs  siftsmall_base_3.fivecs  siftsmall_base_4.fivecs
scripts/: .gitignore  Alice.sh  Bob.sh  OG_3rd.sh  OG_silo.sh  OG_user.sh  Server.sh  Sgx_Broker.sh  Sgx_Silo.sh  Sgx_User.sh  Silo.sh  Tom.sh  User.sh  compile.sh
scripts/vary-silo/: Silo1.sh  Silo2.sh  Silo3.sh  Silo4.sh  Silo5.sh  Silo6.sh  Silo7.sh  Silo8.sh  Silo9.sh
src/: CMakeLists.txt  Opt_Server.cpp  Opt_Silo.cpp  Opt_Untrust3Party.cpp  Server.cpp  Silo.cpp
src/crypto/: util.hpp
src/database/: VectorDB.hpp
src/index/: BaseIndex.hpp  HnswIndex.hpp  IvfIndex.hpp  IvfPqIndex.hpp  LinearScanIndex.hpp  LshIndex.hpp  PqIndex.hpp
src/middleware/: BaseSiloConnector.hpp  FileSiloConnector.hpp  PgSiloConnector.hpp
src/mpc/: OblivQueue.hpp  SecureComparison.hpp  SegmentTree.hpp
src/proto/: FedVectorDB.proto  FedVectorDBO.proto  SgxSilo.proto  SgxUser.proto  UntrustThirdParty.proto
src/sgx/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h
src/sgx/cmake/: FindSGX.cmake
src/sgx/mpc/: SgxMpc.cpp  SgxMpc.h
src/utils/: BenchLogger.hpp  DataType.hpp  File_IO.cpp  File_IO.h  MetricType.hpp
